# Downloader_api_json

./: README.md  pyproject.toml  тз.txt
task/: README.md  app_logger.py  main.py  models.py  views.py
tests/: conftest.py  test_tests.py
tests/test_files/: Bret.txt
