[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
pylint = "^2.7.2"
pytest = "^6.2.2"
pytest-datafiles = "^2.0"
pytest-mock = "^3.5.1"

[tool.poetry.scripts]
task = "task.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
